# minac

./: .gitignore  Cargo.toml  README.md  settings.toml
src/: lichess_client.rs  main.rs  offline.rs  stockfish.rs  utils.rs
src/online/: commands.rs  game_setup.rs  gameplay.rs  mod.rs
