[package]
name = "minac"
version = "0.1.1"
authors = ["yzoug <zoug@protonmail.ch>"]
edition = "2021"

[dependencies]
chess = { path = "../chess-yzoug-fork" }
lichess-api = { path = "../lichess-api-yzoug-fork" }
tokio = { version = "1.32.0", features = ["full"] }
futures = { version = "0.3.28" }
reqwest = { version = "0.11.13", features = ["json", "stream"]}
