[package]
name = "minac"
version = "0.2.0"
authors = ["zoug <git@zoug.fr>"]
edition = "2024"

[dependencies]
chess = { path = "../chess" }
lichess-api = { version = "0.7.0" }
reqwest = { version = "0.12.7", features = ["json", "stream"] }
tokio = { version = "1.48.0", features = ["full"] }
futures = { version = "0.3.28" }
log = { version = "0.4.28" }
env_logger = { version = "0.11.8" }
vampirc-uci = { path = "../vampirc-uci", features = ["chess"] }
